# bridgevr-dev

./: .gitignore  Cargo.toml  LICENSE  README.md  build_release.sh  install_driver.sh  old_future_README.md  settings.json  settings_schema.json  uninstall_driver.sh
.cargo/: config
bridgevr/: Cargo.toml
bridgevr/client_hmd/: Cargo.toml  README.md
bridgevr/client_hmd/src/: android_audio.rs  compositor.rs  lib.rs  main.rs  ovr.rs
bridgevr/client_hmd/src/vrclient/: mod.rs
bridgevr/client_tracker/: Cargo.toml
bridgevr/common/: Cargo.toml  build.rs
bridgevr/common/src/: audio.rs  data.rs  event_timing.rs  ffr.rs  frame_slices.rs  input_paths.rs  lib.rs  logging.rs  main.rs  sockets.rs  thread_loop.rs
bridgevr/common/src/data/: constants.rs  mod.rs  settings.rs
bridgevr/common/src/graphics/: context.rs  mod.rs  texture.rs  uniform_buffer.rs
bridgevr/derive/: Cargo.toml
bridgevr/derive/src/: lib.rs
bridgevr/openvr-driver-sys/: Cargo.toml
bridgevr/openvr-driver-sys/include/: openvr_driver.h
bridgevr/openvr-driver-sys/src/: lib.rs  vector
bridgevr/openxr_test/: Cargo.toml  build.rs
bridgevr/openxr_test/src/: main.rs
bridgevr/openxr_test/src/graphics/: context.rs  mod.rs  storage.rs
bridgevr/ovr-mobile-sdk-sys/: Cargo.toml  build.rs
bridgevr/ovr-mobile-sdk-sys/src/: lib.rs
bridgevr/playground/: Cargo.toml
bridgevr/playground/src/: main.rs
bridgevr/playground/src/graphics/: buffer.rs  context.rs  mod.rs  texture.rs
bridgevr/server_bootstrap/: Cargo.toml
bridgevr/server_driver/: Cargo.toml  build.rs
bridgevr/server_driver/src/: compositor.rs  lib.rs  logging_backend.rs  video_encoder.rs
bridgevr/server_driver/src/openvr/: hmd.rs  mod.rs  settings.rs  tracked_device.rs
bridgevr/server_gui/: Cargo.toml  build.rs
bridgevr/server_gui/src/: main.rs  settings.rs
bridgevr/vulkan_test/: Cargo.toml  build.rs
bridgevr/vulkan_test/shaders/: shader.glsl
bridgevr/vulkan_test/src/: main.rs
bridgevr/vulkan_test/src/graphics/: mod.rs  storage.rs
bridgevr/xtask/: Cargo.toml  build.rs
bridgevr/xtask/src/: lib.rs  main.rs
bridgevr_client/: Cargo.toml
bridgevr_client/src/: logging_backend.rs  main.rs  openxr.rs  video_decoder.rs  vr_client.rs
bridgevr_common/: Cargo.toml  build.rs
bridgevr_common/src/: audio.rs  audio_encoder.rs  audio_io.rs  audio_recorder.rs  buffer_mpsc.rs  constants.rs  data.rs  event_timing.rs  ffmpeg.rs  ffr.rs  ffr_utils.rs  frame_slices.rs  gstreamer.rs  input_mapping.rs  lib.rs  logging.rs  packets.rs  rendering.rs  rendering_utils.rs  ring_buffer.rs  ring_channel.rs  settings.rs  sockets.rs  thread_loop.rs  timeout_map.rs  vk_rendering_utils.rs
bridgevr_common/src/rendering/: graphics_context.rs  texture.rs  uniform_buffer.rs
bridgevr_server/: Cargo.toml  build.rs
bridgevr_server/src/: compositor.rs  d3d_rendering_utils.rs  graphics.rs  lib.rs  logging_backend.rs  nvenc.rs  openvr_backend.rs  shutdown_signal.rs  statistics.rs  utils.rs  video_encoder.rs
bridgevr_server/src/openvr/: controllers.rs  hmd.rs  mod.rs  settings.rs  tracked_device.rs  tracked_devices.rs
bridgevr_server_gui/: README.md  index.html  index.js  package-lock.json  package.json  settings-schema.xml
bridgevr_server_gui/strings/: en.xml
client_hmd/: Cargo.toml  build.rs
client_hmd/src/: compositor.rs  main.rs  oboe.rs  vr_client.rs
client_tracker/: Cargo.toml
common/: Cargo.toml
common/src/: constants.rs  ffr.rs  frame_slices.rs  lib.rs  timeout_map.rs
common/src/rendering/: graphics_context.rs  mod.rs
nvidia-video-codec-sdk-sys/: Cargo.toml  README.md  build.rs
nvidia-video-codec-sdk-sys/include/: nvEncodeAPI.h
nvidia-video-codec-sdk-sys/src/: decoder.h  encoder.h  lib.rs  windows.h
openvr-driver/: Cargo.toml  README.md
openvr-driver-sys/: Cargo.toml  build.rs
openvr-driver-sys/include/: openvr_driver.h  todo
openvr-driver-sys/src/: dummy_string.h  dummy_vector.h  lib.rs  openvr_driver_capi.h  string
openvr-driver/src/: lib.rs
ovr-mobile-sdk-sys/: Cargo.toml  build.rs
ovr-mobile-sdk-sys/src/: bindings.h  lib.rs
playground/: Cargo.toml
playground/src/: logging_backend.rs  main.rs
server_driver/: Cargo.toml  build.rs
server_driver/src/: compositor.rs  logging_backend.rs
server_gui/: Cargo.toml
server_release_template/: bridgevr.desktop  driver.vrdrivermanifest  session.json  settings.json
settings-schema/: Cargo.toml
settings-schema-derive/: Cargo.toml
settings-schema-derive/src/: lib.rs
settings-schema/src/: lib.rs
wiki/: choosing gui libraries.md  choosing web server library.md  ffmpeg video APIs.md  gstreamer elements.md  implementation strategies.md  todo.md  wiki build from source.md  wiki codebase comments.md  wiki contribute.md  wiki how it works.md  wiki index.md  wiki installation.md  wiki settings explanation.md
