[workspace]
members = [
    # 'openvr-driver-sys',
    # 'bridgevr/xtask',
    # 'bridgevr/common',
    # 'bridgevr/server_bootstrap',
    # 'bridgevr/server_driver',
    # 'bridgevr/server_gui',
    # 'bridgevr/client_hmd',
    # 'bridgevr/client_tracker',
    # 'bridgevr/vulkan_test'
    'bridgevr/openxr_test'
]