[package]
name = 'bridgevr_common'
version = '0.0.1'
authors = ['Riccardo Zaglia <github.com/zarik5>']
license = 'MIT'
edition = '2018'

[lib]
crate-type = ['lib']

[features]
default = []
dx11 = ['gfx-backend-dx11', 'wio', 'winapi']
vulkan = ['gfx-backend-vulkan', 'ash']
metal = ['gfx-backend-metal']

[dependencies]
serde_json = '1.0.44'
bincode = '1.2.1'
bitflags = '1.2.1'
log = '0.4.8'
gfx-hal = '0.4.1'
statrs = '0.12.0'
serde = { version = '1.0.103', features = ['derive'] }
cpal = { git = "https://github.com/RustAudio/cpal" }
byteorder = "1.3.2"
backtrace = "0.3.40"
safe-transmute = "0.10.1"
parking_lot = "0.10.0"

[target."cfg(any(target_os = \"linux\", target_os = \"android\", windows))".dependencies]
# WARNING: any version change can create undefined behaviour
gfx-backend-vulkan = { version = '0.4.0', optional = true }
ash = {version = '0.29.0', optional = true}

[target."cfg(windows)".dependencies]
# WARNING: any version change can create undefined behaviour
gfx-backend-dx11 = { version = '0.4.3', optional = true }
winapi = { version = '0.3.8', optional = true }
wio = { version = '0.2.2', optional = true }

[target."cfg(target_os = \"macos\")".dependencies]
gfx-backend-metal = { version = '0.4.1', optional = true }

[build-dependencies]
pkg-config = '0.3.17'
