[package]
name = 'playground'
version = '0.1.0'
authors = ['Riccardo Zaglia <github.com/zarik5>']
license = 'MIT'
edition = '2018'

[dependencies]
chrono = '0.4.9'
log = '0.4.8'
fern = '0.5.9'
msgbox = '0.4.0'
pkg-config = '0.3.17'
serde = '1.0.102'
bincode = '1.2.0'
lazy_static = '*'
zerocopy = '*'

# [dependencies.gstreamer]
# version = '0.14.5'
# features = ['v1_16']

[dependencies.bridgevr_common]
path = '../bridgevr_common'
features = ['vulkan']

[build-dependencies]
pkg-config = '*'
