[package]
name = 'openxr_test'
version = '0.1.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
gfx-hal = '0.5.0'
openxr = '0.12.1'
bridgevr_common = { path = '../common' }
safe-transmute = '0.11.0-rc.2'

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
gfx-backend-vulkan = '0.5.2'

[target.'cfg(windows)'.dependencies]
gfx-backend-dx11 = '0.5.0'

[build-dependencies]
shaderc = '0.6.2'