[package]
name = 'ovr-mobile-sdk-sys'
version = '13.0.0'
authors = ['Riccardo Zaglia <github.com/zarik5>']
license = 'MIT'
edition = '2018'
build = 'build.rs'

[lib]
crate-type = ['rlib']

[features]
default = ['zip']
custom-version = []

[build-dependencies]
bindgen = '0.53.1'
zip = {version = '0.5.5', optional = true }