[package]
name = 'bridgevr_server_driver'
version = '0.1.0-alpha.0'
authors = ['Riccardo Zaglia <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[lib]
crate-type = ['cdylib']

[dependencies]
chrono = '0.4.11'
log = '0.4.8'
fern = '0.6.0'
bincode = '1.2'
lazy_static = '1.4'
nalgebra = '0.21.0'
parking_lot = '0.10.2'
bridgevr_common = { path = '../common' }
openvr-driver-sys = { path = '../../openvr-driver-sys' }

[target.'cfg(target_os = "linux")'.dependencies]
gtk = '0.8.1'

[target.'cfg(any(windows, target_os = "macos"))'.dependencies]
msgbox = '0.4.0'

[build-dependencies]
dirs = '2.0'
bridgevr_xtask = { path = '../xtask' }