[package]
name = 'bridgevr_server_gui'
version = '0.1.0-alpha.0'
authors = ['zarik5 <riccardo.zaglia5@gmail.com>']
license = 'MIT'
edition = '2018'

[dependencies]
serde_json = '^1.0'
bridgevr_xtask = { path = '../xtask' }
settings-schema = { path = '../../settings-schema'}
iced = '0.1.1'

[build-dependencies]
serde_json = '1.0'
bridgevr_common = { path = '../common' }